# smogon-vgc-mcp

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
.claude/council/: index.json
.github/workflows/: tests.yml
calc/: calc_wrapper.js
docs/superpowers/plans/: 2026-04-08-champions-pokedex-pipeline.md  2026-04-08-champions-stat-calculator.md  2026-04-10-champions-data-pipelines.md  2026-04-22-champions-team-ingestion-phase1-2.md
docs/superpowers/specs/: 2026-04-22-champions-team-ingestion-design.md
scripts/: seed_nb_posts.py
src/smogon_vgc_mcp/: __init__.py  formats.py  health.py  server.py
src/smogon_vgc_mcp/calculator/: __init__.py  champions_sp_optimizer.py  champions_speed.py  champions_stats.py  damage.py  ev_optimizer.py  speed_tiers.py  stats.py  types.py
src/smogon_vgc_mcp/data/: __init__.py  pokemon_data.py
src/smogon_vgc_mcp/database/: __init__.py  champions_team_queries.py  models.py  queries.py  (+2 more)
src/vgc_agent/: __init__.py  cli.py  orchestrator.py
tests/: __init__.py  conftest.py  test_calculator_damage.py  test_calculator_speed.py  test_calculator_stats.py  test_calculator_types.py  test_champions_calculator_tools.py  test_champions_dex_fetch.py  test_champions_dex_queries.py  test_champions_pokemon_list.py  test_champions_sp_optimizer.py  test_champions_speed.py  test_champions_stats.py  test_champions_team_queries.py  test_champions_team_schema.py  test_data_pokemon.py  test_database_champions_usage_schema.py  test_database_models.py  test_database_queries.py  test_fetcher_champions_dex.py  test_fetcher_champions_moves.py  test_fetcher_moveset.py  test_fetcher_pikalytics_champions.py  test_fetcher_pokepaste.py  test_fetcher_replay_list.py  test_fetcher_serebii_parser.py  test_fetcher_sheets.py  test_fetcher_showdown_auth.py  test_fetcher_smogon.py  test_formats.py  test_health.py  test_ingestion_classifier.py  test_ingestion_cli.py  test_ingestion_normalizer.py  test_ingestion_pipeline.py  test_ingestion_tier1.py  test_ingestion_validator.py  test_labeler.py  test_normalize_pokemon.py  test_nugget_bridge_chunk.py  (+18 more)
tests/fixtures/: champions_pokepaste_sample.txt  pikalytics_incineroar.html  serebii_champions_moves.html  serebii_charizard.html
tests/integration/: __init__.py  conftest.py  test_concurrency.py  test_data_integrity.py  test_error_handling.py  test_health.py  test_protocol.py  test_tool_responses.py
tests/vgc_agent/: __init__.py  test_events.py  test_types.py
(+102 files in other folders)
