[project]
name = "smogon-vgc-mcp"
version = "0.1.0"
description = "MCP server for Smogon VGC 2026 competitive Pokemon stats"
readme = "README.md"
authors = [
    { name = "Daniel Song", email = "xdtsong@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tenacity>=8.2.0",
]

[project.scripts]
smogon-vgc-mcp = "smogon_vgc_mcp.entry.stdio:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
