[project]
name = "smogon-vgc-mcp"
version = "0.1.0"
description = "MCP server for Smogon VGC 2026 competitive Pokemon stats"
readme = "README.md"
authors = [
    { name = "Daniel Song", email = "xdtsong@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tenacity>=8.2.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
labeler = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
]

[project.scripts]
smogon-vgc-mcp = "smogon_vgc_mcp.entry.stdio:main"
vgc-build = "vgc_agent.cli:main"
vgc-ingest = "smogon_vgc_mcp.entry.ingest_cli:main"
vgc-label = "smogon_vgc_mcp.labeler.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/smogon_vgc_mcp", "src/vgc_agent"]
